# CSS535_HPC

./: .gitignore
labN/: Makefile  README.md
labN/include/: Array.hpp  Config.hpp  ConfigSet.hpp  CpuGemv.hpp  GlobalMemory.hpp  KernelConfig.hpp  Matrix.hpp  NaiveGemv.hpp  Registers.hpp  ShareMemory.hpp  Validate.hpp
labN/report/: report.md
labN/src/: Config.cpp  CpuGemv.cpp  GlobalMemory.cu  KernelConfig.cpp  Main.cu  Naive.cu  Registers.cu  ShareMemory.cu  Validate.cpp
project/: CMakeLists.txt  data.csv  data_128.csv  data_256.csv  data_512.csv  record.txt
project/include/: Array.hpp  GAInterface.h  GA_CPU.h  GA_CUDA.h  GA_oneThreadPerGene.hpp  KernelConfig.hpp  TSP.h  TSP_individual.hpp
project/src/: GAKernel.cu  GA_CPU.cpp  GA_CUDA.cu  GA_oneThreadPerGene.cu  KernelConfig.cpp  Main.cu  TSP.cpp  TSP_individual.cu
